--- a/src/components/projects/projects.css
+++ b/src/components/projects/projects.css
@@ -1,8 +1,13 @@
 .project {
   padding: 80px 0;
   position: relative;
-  background-color: black;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../../assets/img/projects_pic.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
 }
+
 .project h2 {
   font-size: 45px;
   font-weight: 700;
@@ -74,6 +79,7 @@
   position: relative;
   border-radius: 30px;
   overflow: hidden;
+  margin: 0 1rem;
   margin-bottom: 24px;
 }
 .proj-imgbx::before {
